# api-ndlocr-lite

./: .env.sample  Dockerfile  Dockerfile.gpu  GEMINI.md  README.md  docker-compose.yml  main.py  pyproject.toml  run_docker_load_tests.sh  run_load_tests.sh  run_ultra_high_load_tests.sh  streamlit_app.py
docs/: architecture.md  load_test_report.md  ndlocr_lite_v1.2.1_evaluation.md
plan/: plan.md
src/api/: main.py
src/core/: engine.py
src/schemas/: ocr.py
tests/: locustfile.py  test_api.py  test_api_errors.py  test_base64_validation.py  test_edge_cases.py  test_engine.py  test_engine_shutdown.py  test_fallback.py  test_file_limit.py  test_image_limits.py  test_import.py  test_limits.py  test_ocr_job_uninitialized.py  test_recog_line.py  test_robustness.py  test_schemas.py  test_security_leakage.py  test_ssrf_fix.py  test_uninitialized_engine.py  test_xml_security.py
